fix(modal): met a jour le z-index du footer

--- a/src/component/modal/style/_module.scss
+++ b/src/component/modal/style/_module.scss
@@ -128,8 +128,8 @@
     @include margin-top(-10v);
     @include margin-top(-12v, md);
     @include sticky(null,null,0);
+    @include z-index(above);
     transition: box-shadow 0.3s;
-    z-index: z-index(modal-footer);
 
     @include preference.forced-colors {
       border-top: 1px solid;
